# ClawStudio

./: .gitignore  CHANGELOG.md  COMPLETION_SUMMARY.md  COMPUTER_USE_GUIDE.md  COMPUTER_USE_STEP1_COMPLETE.md  GIT_SSH_CONFIG.md  LICENSE  PHASE_0_4_COMPLETE.md  PHASE_5_COMPLETE.md  PROJECT_DELIVERY.md  README.md  clawstudio-prd-v2.md  clawstudio-v2-implementation.md  clawstudio-v2-tasks.md  clawstudio.html  hijack.js  hijack.py  hijack_qwen.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml
docs/: Final_sprint_plan.md  prd-v2.1-implementation-plan.md  prd-v2.1-implementation-plan.md.bak  skills.md
scripts/: create-icns.js  create-ico.js  generate-icons.js
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit.rs  channels.rs  computer_use.rs  db.rs  docker.rs  gateway.rs  keychain.rs  lib.rs  main.rs  openclaw.rs  proxy.rs  proxy_state.rs  setup.rs  template.rs  vnc_client.rs
src-tauri/src/enterprise/: audit_logger.rs  auth_provider.rs  mod.rs  sandbox_provider.rs  screenshot_store.rs  storage_backend.rs
src-tauri/src/tests/: audit_tests.rs  gateway_tests.rs  keychain_tests.rs  mod.rs  proxy_tests.rs  setup_tests.rs  template_tests.rs
src/__tests__/: clawstudio.spec.ts
src/components/: AgentCostTable.vue  ChannelAggregator.vue  ChannelManager.vue  CircuitBreakerModal.vue  CreateAgentModal.vue  DockerGuide.vue  FuelGauge.vue  GatewayStatusBar.vue  HITLBar.vue  KanbanBoard.vue  KanbanCard.vue  MonitorPanel.vue  SandboxCard.vue  SetupWizard.vue  Sidebar.vue  TemplateBrowser.vue  ThoughtLog.vue  TokenBreakdown.vue  TraceHistory.vue  TracePlayer.vue  UninstallDialog.vue  VisualStream.vue  VncConnectModal.vue
src/components/setup/: ApiKeySetup.vue  ChannelSetup.vue  ClawInstaller.vue  EnvDetector.vue  LaunchGateway.vue  ModelSelector.vue  NodeInstaller.vue
src/router/: index.ts
src/stores/: agents.ts  computer_use.ts  proxy.ts  settings.ts
src/styles/: variables.css
src/utils/: computer_use.ts  costCalculator.ts  eventParser.ts  template.ts
src/views/: Agents.vue  AuditTraces.vue  CostMonitor.vue  Dashboard.vue  Overwatch.vue  Sandboxes.vue  Settings.vue  SetupWizard.vue  Templates.vue  Traces.vue
tests/: README.md  integration_test.sh  mock_hitl_request.sh
tests/rust/: setup_test.rs
