[package]
name = "clawstudio"
version = "0.1.0"
edition = "2021"
description = "ClawStudio - OpenClaw Visual Workstation"

[lib]
name = "clawstudio_lib"
path = "src/lib.rs"

[[bin]]
name = "clawstudio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
keyring = "2"
bollard = "0.16"               # Docker API client
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }  # HTTP client
base64 = "0.22"                # Base64 encoding
tokio-tungstenite = "0.21"     # WebSocket for VNC
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"                     # Cross-platform home directory
async-trait = "0.1"            # Async trait support
sha2 = "0.10"                  # SHA-256 for audit log hashing
which = "6"                    # Detect command paths
regex = "1"                    # Regex parsing
rusqlite = { version = "0.31", features = ["bundled"] }  # Local audit database
csv = "1"                      # CSV export
# Proxy server dependencies
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "tokio", "server-auto", "client-legacy"] }
http-body = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
async-compression = { version = "0.4", features = ["tokio", "gzip", "zlib"] }
percent-encoding = "2"
bytes = "1"
once_cell = "1"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
